<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ListPreference
        android:defaultValue="false"
        android:entries="@array/names"
        android:entryValues="@array/names"
        android:key="perso_name"
        android:summary="%s"
        android:title="@string/settings_perso_name" />
    <PreferenceCategory app:title="@string/settings_perso">
        <SwitchPreference
            android:defaultValue="false"
            android:disableDependentsState="false"
            android:enabled="false"
            android:key="notifications_activated"
            android:title="@string/settings_notifications_activated"
            android:summary="À venir..."/>
        <CheckBoxPreference
            android:defaultValue="false"
            android:dependency="notifications_activated"
            android:key="notifications_birthdays"
            android:title="@string/settings_notifications_birthdays" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:dependency="notifications_activated"
            android:key="notifications_colles"
            android:title="@string/settings_notifications_colles" />
    </PreferenceCategory>

</PreferenceScreen>
