<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#26000000"
    android:padding="20dp">

    <Spinner
        android:id="@+id/name_spinner"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/name_spinner" />

    <CheckBox
        android:id="@+id/popup_notAgain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not_again" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/ok_popup_button"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:text="@string/ok"
            android:textColor="#3F51B5"
            android:textColorLink="#3F51B5"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>